dnl $Id: configure.ac 317 2010-04-18 00:31:03Z ohl $
dnl configure.ac -- Configuration script for libtool
dnl =======================================================================
dnl Process this file with autoconf to produce a configure script.
dnl =======================================================================
dnl 
dnl Copyright (C) 1999-2015 by 
dnl     Wolfgang Kilian <kilian@physik.uni-siegen.de>
dnl     Thorsten Ohl <ohl@physik.uni-wuerzburg.de>
dnl     Juergen Reuter <juergen.reuter@desy.de>
dnl 	with contributions from 	
dnl 	Christian Speckner <cnspeckn@googlemail.com>
dnl     and others
dnl 
dnl WHIZARD is free software; you can redistribute it and/or modify it
dnl under the terms of the GNU General Public License as published by 
dnl the Free Software Foundation; either version 2, or (at your option)
dnl any later version.
dnl 
dnl WHIZARD is distributed in the hope that it will be useful, but
dnl WITHOUT ANY WARRANTY; without even the implied warranty of
dnl MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the 
dnl GNU General Public License for more details.
dnl 
dnl You should have received a copy of the GNU General Public License
dnl along with this program; if not, write to the Free Software
dnl Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
dnl 
dnl =======================================================================
dnl Environment variables that can be set by the user:
dnl   FC		Fortran compiler
dnl   FCFLAGS		Fortran compiler flags
dnl =======================================================================
dnl 
dnl Start configuration
AC_INIT([libtool-config],[2.2.5])
AM_INIT_AUTOMAKE([1.11 color-tests parallel-tests])
AM_MAKE_INCLUDE
LT_INIT
LT_PREREQ([2.2.6b])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
